--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,13 +1,13 @@
-@import "_resets";
-@import "_variables";
-@import "_mixins";
-@import "_type";
-@import "_nav";
-@import "_layout";
-@import "_articles";
-@import "_articleImages";
-@import "_homeImages";
-@import "_memberForm";
-@import "_test";
+@import "resets";
+@import "variables";
+@import "mixins";
+@import "type";
+@import "nav";
+@import "layout";
+@import "articles";
+@import "articleImages";
+@import "homeImages";
+@import "memberForm";
+@import "test";
 
-@import "_mediaQuerries";
+@import "mediaQuerries";
