--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -12,7 +12,7 @@ $headingFont: 'Nunito', sans-serif;
 $emphasisFont: 'PT Mono', monospace;
 
 // colors
-$linkColor: #0378a6;
+$linkColor: #ffbb00;
 $primaryColor: #004f6e;
 $fontDark: #1c1c1c;
 $fontLight: #fafafa;
@@ -25,6 +25,7 @@ $articleColor: white;
 $navBackColor: #135e56;
 $navHoverColor: #e38242;
 
+// Shadows
 $shadow: 4px 4px 10px #404040;
 $navShadow: 2px 2px 13px #404040;
 $sectionShadow: 2px 1px 10px #3d3d3d;
