--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -14,7 +14,7 @@ $emphasisFont: 'PT Mono', monospace;
 // colors
 $linkColor: #ffbb00;
 $primaryColor: #004f6e;
-$fontDark: #1c1c1c;
+$fontDark: #303030;
 $fontLight: #fafafa;
 $highLightColor: #c78904;
 //--- colours sections
@@ -29,3 +29,4 @@ $navHoverColor: #e38242;
 $shadow: 4px 4px 10px #404040;
 $navShadow: 2px 2px 13px #404040;
 $sectionShadow: 2px 1px 10px #3d3d3d;
+$galleryShadow: 3px 3px 3px #8f8f8f;
