--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,7 +6,7 @@
 @import "layout";
 @import "articles";
 @import "articleImages";
-@import "homeImages";
+@import "images";
 @import "memberForm";
 @import "test";
 
