--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,6 +1,7 @@
 // Sections
 .page{
 	min-height: 100vh;
+	width: 100%;
 	// overflow: auto;
 	background: $siteBack;
 }
@@ -38,6 +39,21 @@ header{
 }
 .section__span{
 	width: 100%;
+}
+.section__clean-up{
+	text-align: center;
+	background: $fontDark;
+
+	p{
+		font-family: $emphasisFont;
+		color: $fontLight;
+		font-size: 1.3em;
+		padding-bottom: 0.5$dPad;
+	}
+	h2{
+		padding: 0.15*$dPad;
+		color: white;
+	}
 }
 .section__span--index{
 	width: 100%;
@@ -92,17 +108,16 @@ header{
 	width: $spancol;
 
 	ul{
-		margin: $dPad;
 		width: $spancol;
 		display: block;
-		float: left;
 
 		li{
 			display: block;
 			width: 3*$col;
-			min-width: 200px;
 			float: left;
-			margin: 20px 0;			
+			min-width: 200px;
+			margin: 20px auto;
+			text-align: center;		
 
 			a{
 				padding: 15px 2*$dPad;
@@ -121,7 +136,37 @@ header{
 		}
 	}
 }
+.about__btn--contaienr{
+	width: $spancol;
+	float: left;
+}
 
 .hidden{
+	display: none;
+}
+
+.gallery__resize{
+	display: flex;
+	align-items: center;
+	flex-wrap: wrap;
+	padding: 0 4px;
+	background: $fontLight;
+}
+.column{
+	flex: 100%;
+	max-width: 100%;
+	padding: 0.25*$dPad;
+
+	img{
+		vertical-align: middle;
+		margin-top: 8px;
+		width: $spancol;
+		border: 10px solid $primaryColor;
+	}
+}
+.column__mobile{
+	display: none;
+}
+.column__tablet{
 	display: none;
 }
