--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -4,6 +4,12 @@
 	width: 100%;
 	// overflow: auto;
 	background: $siteBack;
+	clear: both;
+}
+.page:after{
+	clear: both; 
+  	content: "";
+  	display: table;
 }
 
 header{
@@ -11,7 +17,8 @@ header{
 	width: $spancol;
 	padding: 30px;
 	position: sticky;
-	top: 0
+	top: 0;
+	z-index: 50;
 }
 .section{	
 	padding: 0 0 25px 0;
@@ -137,6 +144,7 @@ header{
 }
 .about__btn--contaienr{
 	width: $spancol;
+	margin: 2% 0;
 	float: left;
 }
 
@@ -144,28 +152,14 @@ header{
 	display: none;
 }
 
-.gallery__resize{
-	display: flex;
-	align-items: center;
-	flex-wrap: wrap;
-	padding: 0 4px;
-	background: $fontLight;
-}
-.column{
-	flex: 100%;
-	max-width: 100%;
-	padding: 0.25*$dPad;
 
-	img{
-		vertical-align: middle;
-		margin-top: 8px;
-		width: $spancol;
-		border: 10px solid $primaryColor;
-	}
-}
-.column__mobile{
-	display: none;
-}
-.column__tablet{
-	display: none;
-}
+
+
+
+
+
+
+
+
+
+
