--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -27,8 +27,7 @@
 		li{
 			background-color: $fontLight;
 		}
-		li.index{
-			background-color: $fontLight;
+		.index{
 			border-radius: 10px 10px 0 0;
 		}
 	}
