--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -19,7 +19,8 @@ $fontDark: #303030;
 $fontLight: #fafafa;
 $highLightColor: #c78904;
 //--- colours sections
-$siteBack: #62c3d9;
+$siteBackgroundColor: #62c3d9;
+$siteBack: url(../assets/siteBackground/img5.jpg);
 $sectionColor: #d8ebf2;
 $articleColor: white;
 // navigation
