added credit for background image

--- a/sass/_mediaQuerries.scss
+++ b/sass/_mediaQuerries.scss
@@ -104,6 +104,7 @@
 	}
 
 	.page{
+		// Image taken by Gabriel Villena
 		@include div-background($siteBack, cover, center, no-repeat);
 	}
 	.section__articles{
